@@ -1,3 +1,10 @@
+* Tue Oct 16 2018 Nick Markowski <nicholas.markowski@onyxpoint.com> - 8.1.0-0
+- Removed unnecessary dependencies from metadata.json.  Now, when users install
+  auditd stand-alone i.e. `puppet module install`, they will not have
+  extraneous modules clutter their environment.
+  - herculesteam/augeasproviders_grub
+  - simp/rsyslog
+
 * Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.0-0
 - Update Hiera 4 to Hiera 5
 
